--- a/helm/tekton-base/templates/config/configmap-config-tracing.yaml
+++ b/helm/tekton-base/templates/config/configmap-config-tracing.yaml
@@ -1,17 +1,4 @@
-# Copyright 2023 The Tekton Authors
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     https://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-
+# pragma: allowlist secret
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -42,5 +29,3 @@ data:
     # API endpoint to send the traces to
     # (optional): The default value is given below
     endpoint: "http://jaeger-collector.jaeger.svc.cluster.local:14268/api/traces"
-    # (optional) Name of the k8s secret which contains basic auth credentials
-    credentialsSecret: "jaeger-creds"
