--- a/pipelines/execute-ansible-playbooks.yaml
+++ b/pipelines/execute-ansible-playbooks.yaml
@@ -89,7 +89,7 @@ spec:
           - name: revision
             value: main
           - name: pathInRepo
-            value: stageTime/tasks/execute-ansible.yaml
+            value: tasks/execute-ansible.yaml
       workspaces:
         - name: source
           workspace: shared-workspace
@@ -131,7 +131,7 @@ spec:
           - name: revision
             value: main
           - name: pathInRepo
-            value: stageTime/tasks/clone-git.yaml
+            value: tasks/clone-git.yaml
       workspaces:
         - name: output
           workspace: shared-workspace
