--- a/tests/pr.yaml
+++ b/tests/pr.yaml
@@ -3,7 +3,7 @@ kind: PipelineRun
 metadata:
   labels:
     tekton.dev/pipeline: execute-ansible-playbooks
-  name: homerun-int-59qc4-2f520379562d-3
+  name: homerun-int-59qc4-2f520379562d-4
   namespace: tekton-pipelines
 spec:
   pipelineRef:
@@ -11,7 +11,7 @@ spec:
     - name: url
       value: https://github.com/stuttgart-things/stage-time.git
     - name: revision
-      value: 90bece6bd38efb1f83dbab73db40c8e01a1c85e7 #pragma: allowlist secret
+      value: main #pragma: allowlist secret
     - name: pathInRepo
       value: pipelines/execute-ansible-playbooks.yaml
     resolver: git
